# mknap_pso

./: CMakeLists.txt  README.md  mknap_pso.project
doc/: elaboration.aux  elaboration.tex  elaboration.toc
src/: mknap_pso.cpp
src/gui/: MainWindow.cpp  MainWindow.h  MouseMonitorPlot.cpp  MouseMonitorPlot.h  SettingsDialog.cpp  SettingsDialog.h
src/parser/: KnapsackProblem.cpp  KnapsackProblem.h  Parser.cpp  Parser.h
src/solver/: Parameters.cpp  Parameters.h  Particle.cpp  Particle.h  Solver.cpp  Solver.h  Swarm.cpp  Swarm.h  UpdateStrategy.cpp  UpdateStrategy.h
ui/: dialog.ui  mainwindow.ui
